# mp2-lab3-stack-and-queue-Kostya-Vinogradov-

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/: CMakeLists.txt  queue.h  stack.h
samples/: CMakeLists.txt
test/: CMakeLists.txt  test_main.cpp  test_queue.cpp  test_stack.cpp
